Fix display if entered title is too long for many components

--- a/src/components/Roadmap/components/RoadmapMainPoint.module.css
+++ b/src/components/Roadmap/components/RoadmapMainPoint.module.css
@@ -10,6 +10,8 @@
 .title {
 	font-weight: bold;
 	margin-bottom: 0.5rem;
+	max-width: 100px;
+	white-space: nowrap;
 }
 
 .steps {
