--- a/src/components/RoadmapPointDetails/RoadmapMidpoints/RoadmapMidpoint/MidpointInfo.module.css
+++ b/src/components/RoadmapPointDetails/RoadmapMidpoints/RoadmapMidpoint/MidpointInfo.module.css
@@ -17,3 +17,8 @@
 	aspect-ratio: 1/1;
 	border-radius: 0.5rem;
 }
+
+.title {
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
